force-app/main/default/objects/Cargo_Delivery__c/fields/AddressForAccept__c.field-meta.xml
<CustomField>
    <fullName>AddressForAccept__c</fullName>
    <label>Pickup Address</label>
    <type>TextArea</type>
</CustomField>