force-app/main/default/objects/Cargo_Delivery__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chassis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TruckFleet__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Full Container Chassis</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>TRANSPORT (CHASSIS)</relationshipLabel>
    <relationshipName>Chassis</relationshipName>
    <type>Lookup</type>
</CustomField>