force-app/main/default/objects/Cargo_Delivery__c/fields/CONTAINER_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTAINER ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.HBL_SHIPMENT__c</field>
            <operation>equals</operation>
            <valueField>Container_Info__c.HBL_SHIPMENT__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Container_Info__c</referenceTo>
    <relationshipName>DELIVERY</relationshipName>
    <type>Lookup</type>
</CustomField>