force-app/main/default/objects/Cargo_Delivery__c/fields/CPNumberOfTheDriver__c.field-meta.xml
<CustomField>
    <fullName>CPNumberOfTheDriver__c</fullName>
    <label>DRIVER CONTACT NUMBERS</label>
    <type>TextArea</type>
</CustomField>