force-app/main/default/objects/Cargo_Delivery__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>HBL_SHIPMENT__r.Field1__r.Name</formula>
    <label>Customer</label>
    <type>Text</type>
</CustomField>