force-app/main/default/objects/Cargo_Delivery__c/fields/DelayStatus__c.field-meta.xml
<CustomField>
    <fullName>DelayStatus__c</fullName>
    <label>Delay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DelayStatus</valueSetName>
    </valueSet>
</CustomField>