force-app/main/default/objects/Cargo_Delivery__c/fields/DeliveryCompany__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCKING COMPANY</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cargo_Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>