force-app/main/default/objects/Cargo_Delivery__c/fields/DeliveryCompanyType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCompanyType__c</fullName>
    <label>Delivery By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>通関業者手配</fullName>
            </value>
            <value>
                <fullName>荷主手配</fullName>
            </value>
            <value>
                <fullName>当社手配</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>