force-app/main/default/objects/Cargo_Delivery__c/fields/DeliveryNote__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNote__c</fullName>
    <inlineHelpText>Input information and it will be shown on Pickup/Delivery Request Form.</inlineHelpText>
    <label>Delivery Remark</label>
    <type>TextArea</type>
</CustomField>