force-app/main/default/objects/Cargo_Delivery__c/fields/DeliveryPhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPhone__c</fullName>
    <label>TEL of Delivery Destination</label>
    <type>TextArea</type>
</CustomField>