force-app/main/default/objects/Cargo_Delivery__c/fields/DEMDETCombined__c.field-meta.xml
<CustomField>
    <fullName>DEMDETCombined__c</fullName>
    <label>DEM &amp; DET COMBINED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DECDETCombined</valueSetName>
    </valueSet>
</CustomField>