force-app/main/default/objects/Cargo_Delivery__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Delivery Destination</label>
    <type>TextArea</type>
</CustomField>