force-app/main/default/objects/Cargo_Delivery__c/fields/Destinationaddress__c.field-meta.xml
<CustomField>
    <fullName>Destinationaddress__c</fullName>
    <label>Delivery Destination Address</label>
    <type>TextArea</type>
</CustomField>