force-app/main/default/objects/Cargo_Delivery__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipLabel>TRANSPORT</relationshipLabel>
    <relationshipName>TRANSPORT</relationshipName>
    <type>Lookup</type>
</CustomField>