force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyContainerDepot__c.field-meta.xml
<CustomField>
    <fullName>EmptyContainerDepot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPTY CONTAINER DEPOT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRANSPORT(EMTPY CONTAINER DEPOT)</relationshipLabel>
    <relationshipName>EmptyContainerDepot</relationshipName>
    <type>Lookup</type>
</CustomField>