force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>EmptyDeliveryAddress__c</fullName>
    <label>EMPTY DELIVERY ADDRESS</label>
    <type>TextArea</type>
</CustomField>