force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>EmptyDeliveryDestination__c</fullName>
    <label>EMPTY DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>