force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyPickupAddress__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupAddress__c</fullName>
    <label>EMPTY PICKUP ADDRESS</label>
    <type>TextArea</type>
</CustomField>