force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupLocation__c</fullName>
    <label>EMPTY PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>