force-app/main/default/objects/Cargo_Delivery__c/fields/EmptyPickupTime__c.field-meta.xml
<CustomField>
    <fullName>EmptyPickupTime__c</fullName>
    <label>EMPTY PICKUP TIME</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>T24HoursPer30Mins</valueSetName>
    </valueSet>
</CustomField>