force-app/main/default/objects/Cargo_Delivery__c/fields/FreeDetentionDays__c.field-meta.xml
<CustomField>
    <fullName>FreeDetentionDays__c</fullName>
    <label>FREE DETENTION DAYS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>