force-app/main/default/objects/Cargo_Delivery__c/fields/NameOfTheDriver__c.field-meta.xml
<CustomField>
    <fullName>NameOfTheDriver__c</fullName>
    <label>DRIVER NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>