force-app/main/default/objects/Cargo_Delivery__c/fields/NumberPlateOfTheTruck__c.field-meta.xml
<CustomField>
    <fullName>NumberPlateOfTheTruck__c</fullName>
    <label>Truck Plate</label>
    <type>TextArea</type>
</CustomField>