force-app/main/default/objects/Cargo_Delivery__c/fields/OUR_TRUCK_FLEET__c.field-meta.xml
<CustomField>
    <fullName>OUR_TRUCK_FLEET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OUR TRUCK &amp; FLEET</label>
    <type>Checkbox</type>
</CustomField>