force-app/main/default/objects/Cargo_Delivery__c/fields/PersonInChargeForAccept__c.field-meta.xml
<CustomField>
    <fullName>PersonInChargeForAccept__c</fullName>
    <label>PIC OF PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>