force-app/main/default/objects/Cargo_Delivery__c/fields/PICEmptyDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>PICEmptyDeliveryDestination__c</fullName>
    <label>P.I.C OF EMPTY DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>