force-app/main/default/objects/Cargo_Delivery__c/fields/PICEmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PICEmptyPickupLocation__c</fullName>
    <label>P.I.C OF EMPTY PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>