force-app/main/default/objects/Cargo_Delivery__c/fields/Pickupdate__c.field-meta.xml
<CustomField>
    <fullName>Pickupdate__c</fullName>
    <inlineHelpText>Pickup Date must be earlier than Delivery Date.</inlineHelpText>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>