force-app/main/default/objects/Cargo_Delivery__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <label>Pickup From</label>
    <type>TextArea</type>
</CustomField>