force-app/main/default/objects/Cargo_Delivery__c/fields/ReceiverContact__c.field-meta.xml
<CustomField>
    <fullName>ReceiverContact__c</fullName>
    <label>TEL OF PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>