force-app/main/default/objects/Cargo_Delivery__c/fields/ReceiverRep__c.field-meta.xml
<CustomField>
    <fullName>ReceiverRep__c</fullName>
    <label>PIC of Delivery Destination</label>
    <type>TextArea</type>
</CustomField>