force-app/main/default/objects/Cargo_Delivery__c/fields/TelOfEmptyPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>TelOfEmptyPickupLocation__c</fullName>
    <label>TEL OF EMPTY PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>