force-app/main/default/objects/Cargo_Delivery__c/fields/transporter_type__c.field-meta.xml
<CustomField>
    <fullName>transporter_type__c</fullName>
    <inlineHelpText>When you choose the Record Type Charter or  drayage Truck&amp;Driver Detail can be input.</inlineHelpText>
    <label>TRUCK TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;DC</fullName>
            </value>
            <value>
                <fullName>40&apos;HC</fullName>
            </value>
            <value>
                <fullName>20&apos;REF</fullName>
            </value>
            <value>
                <fullName>40&apos;REF</fullName>
            </value>
            <value>
                <fullName>20&apos;FT</fullName>
            </value>
            <value>
                <fullName>40&apos;FT</fullName>
            </value>
            <value>
                <fullName>20&apos;OT</fullName>
            </value>
            <value>
                <fullName>40&apos;OT</fullName>
            </value>
            <value>
                <fullName>20&apos;PF</fullName>
            </value>
            <value>
                <fullName>40&apos;PF</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>20&apos;DC-Flexi</fullName>
            </value>
            <value>
                <fullName>2Ton</fullName>
            </value>
            <value>
                <fullName>2Ton Long</fullName>
            </value>
            <value>
                <fullName>4Ton</fullName>
            </value>
            <value>
                <fullName>10Ton</fullName>
            </value>
            <value>
                <fullName>2Ton Powergate</fullName>
            </value>
            <value>
                <fullName>2Ton Air Suspension</fullName>
            </value>
            <value>
                <fullName>2Ton Long Powergate</fullName>
            </value>
            <value>
                <fullName>2Ton Long Air Suspension</fullName>
            </value>
            <value>
                <fullName>4Ton Powergate</fullName>
            </value>
            <value>
                <fullName>4Ton Air Suspension</fullName>
            </value>
            <value>
                <fullName>10Ton Powergate</fullName>
            </value>
            <value>
                <fullName>10Ton Air Suspension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>