force-app/main/default/objects/Cargo_Delivery__c/fields/TransportStatus__c.field-meta.xml
<CustomField>
    <fullName>TransportStatus__c</fullName>
    <label>Transport Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransportStatus</valueSetName>
    </valueSet>
</CustomField>