force-app/main/default/objects/Cargo_Delivery__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Truck</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>TRANSPORT(TRUCK)</relationshipLabel>
    <relationshipName>Transport</relationshipName>
    <type>Lookup</type>
</CustomField>