force-app/main/default/objects/Cargo_Delivery__c/fields/TRUCKING_COMPANY_PIC__c.field-meta.xml
<CustomField>
    <fullName>TRUCKING_COMPANY_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCKING COMPANY PIC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.DeliveryCompany__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CARGO_DELIVERY</relationshipName>
    <type>Lookup</type>
</CustomField>