force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Charter_Truck_Export.recordType-meta.xml
<RecordType>
    <fullName>Charter_Truck_Export</fullName>
    <active>true</active>
    <description>Arrange exclusive use of a vehicle for Outbound cargo</description>
    <label>Charter Truck-Outbound</label>
</RecordType>