force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Charter_Truck_Import.recordType-meta.xml
<RecordType>
    <fullName>Charter_Truck_Import</fullName>
    <active>true</active>
    <description>Arrange exclusive use of a vehicle for Inbound cargo</description>
    <label>Charter Truck-Inbound</label>
</RecordType>