force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Consolidation_Truck_Export.recordType-meta.xml
<RecordType>
    <fullName>Consolidation_Truck_Export</fullName>
    <active>true</active>
    <description>Arrange a truck combine several individual cargo to make up a full for outbound cargo</description>
    <label>Consolidation Truck-Outbound</label>
</RecordType>