force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Consolidation_Truck_Import.recordType-meta.xml
<RecordType>
    <fullName>Consolidation_Truck_Import</fullName>
    <active>true</active>
    <description>Arrange a truck combine several individual cargo to make up a full for Inbound cargo</description>
    <label>Consolidation Truck-Inbound</label>
</RecordType>