force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Drayage_Export.recordType-meta.xml
<RecordType>
    <fullName>Drayage_Export</fullName>
    <active>true</active>
    <description>Arrange a Full Container Truck for an outbound full container</description>
    <label>Full Container Truck-Outbound</label>
</RecordType>