force-app/main/default/objects/Cargo_Delivery__c/recordTypes/Drayage_Import.recordType-meta.xml
<RecordType>
    <fullName>Drayage_Import</fullName>
    <active>true</active>
    <description>Arrange a Full Container Truck for an inbound full container</description>
    <label>Full Container Truck-Inbound</label>
</RecordType>