force-app/main/default/objects/Cargo_Delivery__c/validationRules/PICKUP_DATE_BEFORE_DELIVERY_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>PICKUP_DATE_BEFORE_DELIVERY_DATE</fullName>
    <active>false</active>
    <description>The PICKUP DATE must be ealier the DELIVERY DATE</description>
    <errorConditionFormula>DeliveryDate__c  &gt;=  Pickupdate__c</errorConditionFormula>
    <errorDisplayField>Pickupdate__c</errorDisplayField>
    <errorMessage>The PICKUP DATE must be earlier than the DELIVERY DATE</errorMessage>
</ValidationRule>