force-app/main/default/objects/Cargo_Delivery__c/listViews/All_test_mass_delete.listView-meta.xml
<ListView>
    <fullName>All_test_mass_delete</fullName>
    <columns>NAME</columns>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>CONTAINER_ID__c</columns>
    <columns>DeliveryType__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>Pickupdate__c</columns>
    <columns>Destination__c</columns>
    <columns>Receiver__c</columns>
    <columns>DeliveryCompanyType__c</columns>
    <columns>DeliveryCompany__c</columns>
    <columns>transporter_type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cargo_Delivery__c.Drayage_Export</value>
    </filters>
    <label>All-test mass delete</label>
    <language>en_US</language>
</ListView>