force-app/main/default/objects/Cargo_Delivery__c/listViews/FORWARDING_ID_Seach.listView-meta.xml
<ListView>
    <fullName>FORWARDING_ID_Seach</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>CONTAINER_ID__c</columns>
    <columns>Pickupdate__c</columns>
    <columns>EXPECTED_PICKUP_TIME__c</columns>
    <columns>DeliveryTime__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>Receiver__c</columns>
    <columns>AddressForAccept__c</columns>
    <columns>Destination__c</columns>
    <columns>Destinationaddress__c</columns>
    <columns>NameOfTheDriver__c</columns>
    <columns>CPNumberOfTheDriver__c</columns>
    <columns>DeliveryNote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HBL_SHIPMENT__c</field>
        <operation>equals</operation>
    </filters>
    <label>FORWARDING ID Seach</label>
    <language>en_US</language>
</ListView>