force-app/main/default/objects/Cargo_Delivery__c/listViews/Mass_Update_Charter_Truck_Import.listView-meta.xml
<ListView>
    <fullName>Mass_Update_Charter_Truck_Import</fullName>
    <columns>HBL_SHIPMENT__c</columns>
    <columns>NAME</columns>
    <columns>CONTAINER_ID__c</columns>
    <columns>Pickupdate__c</columns>
    <columns>EXPECTED_PICKUP_TIME__c</columns>
    <columns>Receiver__c</columns>
    <columns>AddressForAccept__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>DeliveryTime__c</columns>
    <columns>Destination__c</columns>
    <columns>Destinationaddress__c</columns>
    <columns>NameOfTheDriver__c</columns>
    <columns>CPNumberOfTheDriver__c</columns>
    <columns>DeliveryNote__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Cargo_Delivery__c.Charter_Truck_Import</value>
    </filters>
    <label>Mass Update-Charter Truck Import</label>
    <language>en_US</language>
</ListView>